kubernetes-manifests/gamma/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace_name}
  labels:
    name: ${namespace_name}
    owner: xds-k8s-interop-test
    mesh.cloud.google.com/csm-injection: proxyless
...
