kubernetes-manifests/gamma/frontend_service.yaml
---
apiVersion: v1
kind: Service          
metadata:           
  name: ${service_name}
  namespace: ${namespace_name}
  labels:
    owner: xds-k8s-interop-test
spec:                   
  ports:      
  - port: 8080
    targetPort: 8080
