kubernetes-manifests/gamma/route_grpc.yaml
---
kind: GRPCRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ${route_name}
  namespace: ${namespace_name}
  labels:
    owner: xds-k8s-interop-test
spec:
  parentRefs:
    - name: ${frontend_service_name}
      namespace: ${namespace_name}
      kind: Service
      ## Must be set explicitly, otherwise inferred from apiVersion.
      group: ""
  rules:
    - matches:
        - method:
            service: grpc.testing.TestService
            method: UnaryCall
      backendRefs:
        - name: ${service_name}
          port: 8080
...
