kubernetes-manifests/gamma/route_http_ssafilter.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ${route_name}
  namespace: ${namespace_name}
  labels:
    owner: xds-k8s-interop-test
spec:
  parentRefs:
    - name: ${frontend_service_name}
      namespace: ${namespace_name}
      group: ""
      kind: Service
  rules:
    - matches:
        - path:
            type: Exact
            value: /grpc.testing.TestService/UnaryCall
      filters:
        - type: ExtensionRef
          extensionRef:
            group: networking.gke.io
            kind: GCPSessionAffinityFilter
            name: ssa-filter
      backendRefs:
        - name: ${service_name}
          port: 8080
...
